<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XuetangX</string>
    
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="login_failed">Log In Failed!</string>
    
    <string name="action_settings">Settings</string>
    <string name="title_activity_tweet_list">Tweet List</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tweet_detail">Tweet Detail</string>
    <string name="action_post">Post</string>
    <string name="post_hint">Share something with friends!</string>
    <string name="post_to">Post to</string>
    <string name="title_activity_post">Post</string>
    <string name="post_text_count">0</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send!</string>
    <string name="action_refresh">Refresh</string>
    <string name="toast_end_of_list">End of List!</string>
    <string name="platform_renren">Renren</string>
    <string name="platform_weibo">Weibo</string>
    <string name="platform_qzone">QZone</string>
    <string name="platform_wechat">WeChat</string>
    <string name="avatar_placeholder">Avatar</string>
    <string name="title_activity_favo">FavoActivity</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>
