<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_post"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_post"
        android:showAsAction="always" />
    
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_favorite"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
